--- a/Lab1Activities/src/main/res/values/strings.xml
+++ b/Lab1Activities/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="activarSonidoNotificaciones">Activar sonido para notificaciones</string>
     <string name="recyclerTitle">Lugares Turísticos</string>
     <string name="addPlace">Añadir un nuevo lugar</string>
+    <string name="editar">Editar</string>
+    <string name="delete">Eliminar</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
